--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
         <!-- Sidebar Section -->
         <aside class="sidebar-section">
-            <img src="images/photo.png" alt="Profile pictures" width="250" class="sidebar-image" />
+            <img src="images/Untitled-2.jpg" alt="Profile pictures" width="250" class="sidebar-image" />
 
             <!-- Contacts Informations -->
             <div class="contacts-container">
